--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <section class="hero">
     <h1>Welcome to Ainexel</h1>
-    <p>Your innovative technology partner.</p>
+    <p>Your innovative technology partner -By Ajithlal</p>
   </section>
 
   <footer>
